# starter-quest

./: .gitignore  CMakeLists.txt  README.md  build-wasm.sh  build.sh  index.html  main.cpp  vercel.json
.github/workflows/: build.yml
assets/: title.txt
baseClasses/: Character.cpp  Character.h  Creature.cpp  Creature.h  Item.cpp  Item.h  Stats.cpp  Stats.h  Weapon.cpp  Weapon.h
characterClasses/: CharacterClass.h  Cleric.cpp  Cleric.h  Rogue.cpp  Rogue.h  Wanderer.cpp  Wanderer.h  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h
docs/: character-class.md  deployment-plan.md  implementation-plan.md  scenarios.md  wasm-plan.md  webassembly-build.md
tests/: character.test.cpp  main.test.cpp
ui/: Menu.cpp  Menu.h
utils/: DiceRoller.cpp  DiceRoller.h
